Créa code HTML de tous les photographes en page d'accueil

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="bloc-page">
         <header class="header" role="banner">
-            <a aria-hidden="true" aria-label="Aide à la navigation" href="#" class="header__help">Passer au contenu</a>
-            <a aria-label="FishEye page d'accueil" href="#" class="header__logo">
+            <a role="link" aria-hidden="true" aria-label="Aide à la navigation" href="#photographer" class="header__help-nav">Passer au contenu</a>
+            <a role="link" alt="FishEye Home page" aria-label="FishEye page d'accueil" href="index.html" class="header__logo">
                 <svg role="img" alt="Logo de FishEye" xmlns="http://www.w3.org/2000/svg" width="200" height="50" viewBox="0 0 200 50" fill="none" aria-describedby="title-logo description-logo">
                     <title id="title-logo">FishEye</title>
                     <desc id="description-logo">Le logo de FishEye</desc>
@@ -28,58 +28,187 @@
             <nav role="navigation" class="header__navigation" aria-label="photographer categories">
                 <ul>
                     <li class="header__navigation__item" id="item-portrait">
-                        <a href="#">#Portrait</a>
+                        <a role="link" href="#">#Portrait</a>
+                        <span class="sr-only">Portrait</span>
                     </li>
                     <li class="header__navigation__item" id="item-art">
-                        <a href="#">#Art</a>
+                        <a role="link" href="#">#Art</a>
+                        <span class="sr-only">Art</span>
                     </li>
                     <li class="header__navigation__item" id="item-fashion">
-                        <a href="#">#Fashion</a>
+                        <a role="link" href="#">#Fashion</a>
+                        <span class="sr-only">Fashion</span>
                     </li>
                     <li class="header__navigation__item" id="item-architecture">
-                        <a href="#">#Architecture</a>
+                        <a role="link" href="#">#Architecture</a>
+                        <span class="sr-only">Architecture</span>
                     </li>
                     <li class="header__navigation__item" id="item-travel">
-                        <a href="#">#Travel</a>
+                        <a role="link" href="#">#Travel</a>
+                        <span class="sr-only">Travel</span>
                     </li>
                     <li class="header__navigation__item" id="item-sport">
-                        <a href="#">#Sport</a>
+                        <a role="link" href="#">#Sport</a>
+                        <span class="sr-only">Sport</span>
                     </li>
                     <li class="header__navigation__item" id="item-animals">
-                        <a href="#">#Animals</a>
+                        <a role="link" href="#">#Animals</a>
+                        <span class="sr-only">Animals</span>
                     </li>
                     <li class="header__navigation__item" id="item-events">
-                        <a href="#">#Events</a>
+                        <a role="link" href="#">#Events</a>
+                        <span class="sr-only">Events</span>
                     </li>
                 </ul>
             </nav>
         </header>
-        <main class="content">
+        <main class="content" id="photographer">
             <section class="content__header">
                 <h1>Nos photographes</h1>
             </section>
             <section class="content__photographer">
                 <div class="content__photographer__profile" aria-label="Informations du profil de la photographe Mimi Keel">
-                    <a aria-label="Lien vers le profil de Mimi Keel" href="#">
-                        <img src="./images/Sample Photos/Mimi/Portrait_Nora.jpg" title="Portrait Mimi Keel" alt="Photo de portrait de la photographe Mimi Keel" />
+                    <a role="link" aria-label="Lien vers le profil de Mimi Keel" href="#">
+                        <img src="./images/Sample Photos/Mimi/Portrait_Nora.jpg" title="Portrait Mimi Keel" alt="" />
                         <h2 aria-label="Nom de la photographe">Mimi Keel</h2>
                     </a>
                     <h3 aria-label="Lieu d'excercie de la photographe">London, Uk</h3>
-                    <p aria-label="Baseline de la photographe">Voir le beau dans le quotidient</p>
+                    <p class="tagline" aria-label="Tagline de la photographe">Voir le beau dans le quotidient</p>
                     <h4 aria-label="Tarif journalier de la photographe">400€/jour</h4>
                     <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Mimi Keel">
                         <ul>
                             <li class="header__navigation__item" id="item-portrait">
-                                <a href="#">#portrait</a>
+                                <a role="link" href="#">#portrait</a>
+                                <span class="sr-only">Portrait</span>
                             </li>
                             <li class="header__navigation__item" id="item-events">
-                                <a href="#">#events</a>
+                                <a role="link" href="#">#events</a>
+                                <span class="sr-only">Events</span>
                             </li>
                             <li class="header__navigation__item" id="item-travel">
-                                <a href="#">#travel</a>
+                                <a role="link" href="#">#travel</a>
+                                <span class="sr-only">Travel</span>
                             </li>
                             <li class="header__navigation__item" id="item-animals">
-                                <a href="#">#animals</a>
+                                <a role="link" href="#">#animals</a>
+                                <span class="sr-only">Animals</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content__photographer__profile" aria-label="Informations du profil de la photographe Ellie-Rose Wilkens">
+                    <a role="link" aria-label="Lien vers le profil de Ellie-Rose Wilkens" href="#">
+                        <img src="./images/Sample Photos/Ellie Rose/Architecture_Horseshoe.jpg" title="Architecture Horseshoe" alt="" />
+                        <h2 aria-label="Nom de la photographe">Ellie-Rose Wilkens</h2>
+                    </a>
+                    <h3 aria-label="Lieu d'excercie de la photographe">Paris, France</h3>
+                    <p class="tagline" aria-label="Tagline de la photographe">Travaille sur des compositions complexes</p>
+                    <h4 aria-label="Tarif journalier de la photographe">250€/jour</h4>
+                    <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Ellie-Rose Wilkens">
+                        <ul>
+                            <li class="header__navigation__item" id="item-sport">
+                                <a role="link" href="#">#Sport</a>
+                                <span class="sr-only">Sport</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-architecture">
+                                <a role="link" href="#">#Architecture</a>
+                                <span class="sr-only">Architecture</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content__photographer__profile" aria-label="Informations du profil de la photographe Tracy Galindo">
+                    <a role="link" aria-label="Lien vers le profil de Tracy Galindo" href="#">
+                        <img src="./images/Sample Photos/Tracy/Fashion_Urban_Jungle.jpg" title="Fashion Urban Jungle" alt="" />
+                        <h2 aria-label="Nom de la photographe">Tracy Galindo</h2>
+                    </a>
+                    <h3 aria-label="Lieu d'excercie de la photographe">Montreal, Canada</h3>
+                    <p class="tagline" aria-label="Tagline de la photographe">Photographe Freelance</p>
+                    <h4 aria-label="Tarif journalier de la photographe">500€/jour</h4>
+                    <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Tracy Galindo">
+                        <ul>
+                            <li class="header__navigation__item" id="item-art">
+                                <a role="link" href="#">#Art</a>
+                                <span class="sr-only">Art</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-fashion">
+                                <a role="link" href="#">#Fashion</a>
+                                <span class="sr-only">Fashion</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-events">
+                                <a role="link" href="#">#Events</a>
+                                <span class="sr-only">Events</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content__photographer__profile" aria-label="Informations du profil du photographe Nabeel Bradford">
+                    <a role="link" aria-label="Lien vers le profil de Nabeel Bradford" href="#">
+                        <img src="./images/Sample Photos/Nabeel/Travel_Outdoor_Baths.jpg" title="Travel Outdoor Baths" alt="" />
+                        <h2 aria-label="Nom du photographe">Nabeel Bradford</h2>
+                    </a>
+                    <h3 aria-label="Lieu d'excercie du photographe">Mexico City, Mexico</h3>
+                    <p class="tagline" aria-label="Tagline du photographe">Je vais toujours de l'avant</p>
+                    <h4 aria-label="Tarif journalier du photographe">350€/jour</h4>
+                    <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil du photographe Nabeel Bradford">
+                        <ul>
+                            <li class="header__navigation__item" id="item-travel">
+                                <a role="link" href="#">#travel</a>
+                                <span class="sr-only">Travel</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-portrait">
+                                <a role="link" href="#">#portrait</a>
+                                <span class="sr-only">Portrait</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content__photographer__profile" aria-label="Informations du profil de la photographe Rhode Dubois">
+                    <a role="link" aria-label="Lien vers le profil de Rhode Dubois" href="#">
+                        <img src="./images/Sample Photos/Rhode/Fashion_Melody_Red_on_Stripes.jpg" title="Fashion Melody Red on Stripes" alt="" />
+                        <h2 aria-label="Nom de la photographe">Rhode Dubois</h2>
+                    </a>
+                    <h3 aria-label="Lieu d'excercie de la photographe">Barcelona, Spain</h3>
+                    <p class="tagline" aria-label="Tagline de la photographe">Créatrice de souvenirs</p>
+                    <h4 aria-label="Tarif journalier de la photographe">375€/jour</h4>
+                    <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Rhode Dubois">
+                        <ul>
+                            <li class="header__navigation__item" id="item-sport">
+                                <a role="link" href="#">#Sport</a>
+                                <span class="sr-only">Sport</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-fashion">
+                                <a role="link" href="#">#Fashion</a>
+                                <span class="sr-only">Fashion</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-events">
+                                <a role="link" href="#">#Events</a>
+                                <span class="sr-only">Events</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-animals">
+                                <a role="link" href="#">#animals</a>
+                                <span class="sr-only">Animals</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content__photographer__profile" aria-label="Informations du profil du photographe Marcel Nikolic">
+                    <a role="link" aria-label="Lien vers le profil de Marcel Nikolic" href="#">
+                        <img src="./images/Sample Photos/Marcel/Travel_Tower.jpg" title="Travel Tower" alt="" />
+                        <h2 aria-label="Nom du photographe">Marcel Nikolic</h2>
+                    </a>
+                    <h3 aria-label="Lieu d'excercie du photographe">Berlin, Germany</h3>
+                    <p class="tagline" aria-label="Tagline du photographe">Toujours à la recherche de LA photo</p>
+                    <h4 aria-label="Tarif journalier du photographe">300€/jour</h4>
+                    <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil du photographe Marcel Nikolic">
+                        <ul>
+                            <li class="header__navigation__item" id="item-travel">
+                                <a role="link" href="#">#travel</a>
+                                <span class="sr-only">Travel</span>
+                            </li>
+                            <li class="header__navigation__item" id="item-architecture">
+                                <a role="link" href="#">#Architecture</a>
+                                <span class="sr-only">Architecture</span>
                             </li>
                         </ul>
                     </div>
