Création CSS profil photographe home page

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                     <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Ellie-Rose Wilkens">
                         <ul>
                             <li class="header__navigation__item" id="item-sport">
-                                <a role="link" href="#">#Sport</a>
+                                <a role="link" href="#">#sport</a>
                                 <span class="sr-only">Sport</span>
                             </li>
                             <li class="header__navigation__item" id="item-architecture">
-                                <a role="link" href="#">#Architecture</a>
+                                <a role="link" href="#">#architecture</a>
                                 <span class="sr-only">Architecture</span>
                             </li>
                         </ul>
@@ -128,15 +128,15 @@
                     <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Tracy Galindo">
                         <ul>
                             <li class="header__navigation__item" id="item-art">
-                                <a role="link" href="#">#Art</a>
+                                <a role="link" href="#">#art</a>
                                 <span class="sr-only">Art</span>
                             </li>
                             <li class="header__navigation__item" id="item-fashion">
-                                <a role="link" href="#">#Fashion</a>
+                                <a role="link" href="#">#fashion</a>
                                 <span class="sr-only">Fashion</span>
                             </li>
                             <li class="header__navigation__item" id="item-events">
-                                <a role="link" href="#">#Events</a>
+                                <a role="link" href="#">#events</a>
                                 <span class="sr-only">Events</span>
                             </li>
                         </ul>
@@ -174,15 +174,15 @@
                     <div class="content__photographer__profile__tag" aria-label="Tags correspondants au profil de la photographe Rhode Dubois">
                         <ul>
                             <li class="header__navigation__item" id="item-sport">
-                                <a role="link" href="#">#Sport</a>
+                                <a role="link" href="#">#sport</a>
                                 <span class="sr-only">Sport</span>
                             </li>
                             <li class="header__navigation__item" id="item-fashion">
-                                <a role="link" href="#">#Fashion</a>
+                                <a role="link" href="#">#fashion</a>
                                 <span class="sr-only">Fashion</span>
                             </li>
                             <li class="header__navigation__item" id="item-events">
-                                <a role="link" href="#">#Events</a>
+                                <a role="link" href="#">#events</a>
                                 <span class="sr-only">Events</span>
                             </li>
                             <li class="header__navigation__item" id="item-animals">
@@ -207,7 +207,7 @@
                                 <span class="sr-only">Travel</span>
                             </li>
                             <li class="header__navigation__item" id="item-architecture">
-                                <a role="link" href="#">#Architecture</a>
+                                <a role="link" href="#">#architecture</a>
                                 <span class="sr-only">Architecture</span>
                             </li>
                         </ul>
