Créa CSS header page photographer

--- a/photographer-page.html
+++ b/photographer-page.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="bloc-page">
-        <header class="header" role="banner">
+        <header class="header-photographer" role="banner">
             <a role="link" alt="FishEye Home page" aria-label="FishEye page photographe" href="index.html" class="header__logo">
-                <svg role="img" alt="Logo de FishEye" xmlns="http://www.w3.org/2000/svg" width="200" height="50" viewBox="0 0 200 50" fill="none" aria-describedby="title-logo description-logo">
+                <svg role="img" alt="Logo de FishEye" xmlns="http://www.w3.org/2000/svg" width="130" height="50" viewBox="0 0 200 50" fill="none" aria-describedby="title-logo description-logo">
                     <title id="title-logo">FishEye</title>
                     <desc id="description-logo">Le logo de FishEye</desc>
                     <path d="M24.7206 0.911621V6.51058H6.31164V17.5783H21.4333V22.9168H6.31164V39.1929H0V0.911621H24.7206Z" fill="#911C1C"/>
