Création CSS de l'affichage photo sur la page photographer

--- a/photographer-page.html
+++ b/photographer-page.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/a8644ceeef.js" crossorigin="anonymous"></script>
     <title>PHOTOGRAPHER - FishEye</title>
 </head>
 
@@ -63,7 +64,7 @@
             </section>
             <div class="content-photographer__like" id="photographer-Mimi-Kee__like">
                 <p class="number-like" aria-label="Nombre total de like">297 081</p>
-                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                <i class="fas fa-heart"></i>
                 <p aria-label="Tarif journalier de la photographe">400€/jour</p>
             </div>
             <section class="content-photographer__work">
@@ -79,10 +80,10 @@
                     <div class="content-photographer__work__photography__content">
                         <img src="./images/Sample Photos/Mimi/Animals_Rainbow.jpg" title="Arc-en-ciel" alt="Oiseau avec couleurs arc en ciel, posé sur une branche en bois" href="#" />
                         <div class="content-photographer__work__photography__content__title">
-                            <h5 aria-label="titre de la photo">Arc-en-cie</h5>
+                            <h5 aria-label="titre de la photo">Arc-en-ciel</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 12
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
@@ -92,7 +93,7 @@
                             <h5 aria-label="titre de la photo">Solitude</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 12
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
@@ -102,7 +103,7 @@
                             <h5 aria-label="titre de la photo">Arc-en-cie</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 12
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
@@ -112,7 +113,7 @@
                             <h5 aria-label="titre de la photo">Portrait Black and White</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 24
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
@@ -122,7 +123,7 @@
                             <h5 aria-label="titre de la photo">Mariage nature</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 12
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
@@ -132,7 +133,7 @@
                             <h5 aria-label="titre de la photo">Portrait enfant</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 36
-                                <img src="./images/like.svg" title="Like's number" alt="Likes" />
+                                <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
                             </p>
                         </div>
                     </div>
