Ajustements CSS page photographer et accueil

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </section>
             <section class="content__photographer">
                 <div class="content__photographer__profile" aria-label="Informations du profil de la photographe Mimi Keel">
-                    <a role="link" aria-label="Lien vers le profil de Mimi Keel" href="#">
+                    <a role="link" aria-label="Lien vers le profil de Mimi Keel" href="./photographer-page.html">
                         <img src="./images/Sample Photos/Mimi/Portrait_Nora.jpg" title="Portrait Mimi Keel" alt="" />
                         <h2 aria-label="Nom de la photographe">Mimi Keel</h2>
                     </a>
