--- a/photographer-page.html
+++ b/photographer-page.html
@@ -100,7 +100,7 @@
                     <div class="content-photographer__work__photography__content">
                         <img src="./images/Sample Photos/Mimi/Event_SeasideWedding.jpg" title="Mariage à la mer" alt="Table de mariage au bord de la mer" href="#" />
                         <div class="content-photographer__work__photography__content__title">
-                            <h5 aria-label="titre de la photo">Arc-en-cie</h5>
+                            <h5 aria-label="titre de la photo">Mariage à la mer</h5>
                             <p aria-label="Nombre de likes sur la photo">
                                 12
                                 <i class="fas fa-heart" title="Like's number" alt="Likes"></i>
