Création CSS modal contact

--- a/photographer-page.html
+++ b/photographer-page.html
@@ -145,30 +145,30 @@
             <div class="modal-contact__content" aria-label="Fenêtre de contact Mimi Keel">
                 <div class="modal-contact__content__body" aria-label="Elements de la fenêtre de contact">
                     <h1>Contactez-moi</h1>
-                    <h1>Mimi Keel</h1>
+                    <h2>Mimi Keel</h2>
                     <form id="formulaire-contact" name="contact" action="photographer-page.html" method="GET">
 
                         <div class="formData">
                             <label for="firstname">Prénom</label><br>
-                            <input class="text-control" type="text" id="firstname" name="firstname" /><br> 
+                            <input type="text" class="text-control" type="text" id="firstname" name="firstname" /><br> 
                             <span class="error" id="errorfirstname"></span>   
                         </div>
 
                         <div class="formData">
                             <label for="lastname">Nom</label><br>
-                            <input class="text-control" type="text" id="lastname" name="lastname" /><br>
+                            <input type="text" class="text-control" type="text" id="lastname" name="lastname" /><br>
                             <span class="error" id="errorlastname"></span>
                         </div>
 
                         <div class="formData">
-                            <label for="email">E-mail</label><br>
-                            <input class="text-control" id="email" name="email"/><br>
+                            <label for="email">Email</label><br>
+                            <input type="email" class="text-control" id="email" name="email"/><br>
                             <span class="error" id="erroremail"></span>
                         </div>
 
                         <div class="formData">
                             <label for="message">Votre message</label><br>
-                            <input class="text-control" id="message" name="message"/><br>
+                            <input type="text" class="text-control" id="message" name="message"/><br>
                             <span class="error" id="errormessage"></span>
                         </div>
 
@@ -179,7 +179,7 @@
                 <span class="modal-contact__content__close" id="closecontactform" aria-label="Bouton de fermeture de la fenêtre de contact"></span>
             </div>
         </section> 
-           
+
         </main>
     </div>
 </body>
